@@ -1,9 +1,10 @@
 package io.kestra.plugin.fs.vfs;
 
-import io.kestra.core.models.annotations.PluginProperty;
+import io.kestra.core.models.property.Property;
 import io.kestra.core.models.tasks.RunnableTask;
 import io.kestra.core.runners.RunContext;
 import io.swagger.v3.oas.annotations.media.Schema;
+import jakarta.validation.constraints.NotNull;
 import lombok.*;
 import lombok.experimental.SuperBuilder;
 import org.apache.commons.vfs2.FileSystemOptions;
@@ -11,7 +12,6 @@ import org.apache.commons.vfs2.FileType;
 import org.apache.commons.vfs2.impl.StandardFileSystemManager;
 import org.slf4j.Logger;
 
-import jakarta.validation.constraints.NotNull;
 import java.net.URI;
 import java.util.AbstractMap;
 import java.util.Map;
@@ -28,33 +28,29 @@ public abstract class Downloads extends AbstractVfsTask implements RunnableTask<
     @Schema(
         title = "The directory to list"
     )
-    @PluginProperty(dynamic = true)
     @NotNull
-    private String from;
+    private Property<String> from;
 
     @Schema(
         title = "The action to do on downloaded files"
     )
-    @PluginProperty(dynamic = true)
-    private Downloads.Action action;
+    private Property<Downloads.Action> action;
 
     @Schema(
         title = "The destination directory in case off `MOVE` "
     )
-    @PluginProperty(dynamic = true)
-    private String moveDirectory;
+    private Property<String> moveDirectory;
 
     @Schema(
         title = "A regexp to filter on full path"
     )
-    @PluginProperty(dynamic = true)
-    private String regExp;
+    private Property<String> regExp;
 
     @Schema(
         title = "List file recursively"
     )
     @Builder.Default
-    private boolean recursive = false;
+    private Property<Boolean> recursive = Property.of(false);
 
     public Output run(RunContext runContext) throws Exception {
         Logger logger = runContext.logger();
@@ -64,7 +60,7 @@ public abstract class Downloads extends AbstractVfsTask implements RunnableTask<
             fsm.init();
 
             // path
-            URI from = this.uri(runContext, this.from);
+            URI from = this.uri(runContext, runContext.render(this.from).as(String.class).orElseThrow());
 
             // connection options
             FileSystemOptions fileSystemOptions = this.fsOptions(runContext);
@@ -73,16 +69,16 @@ public abstract class Downloads extends AbstractVfsTask implements RunnableTask<
                 runContext,
                 fsm,
                 fileSystemOptions,
-                this.uri(runContext, this.from),
-                runContext.render(this.regExp),
-                recursive
+                this.uri(runContext, runContext.render(this.from).as(String.class).orElseThrow()),
+                runContext.render(this.regExp).as(String.class).orElse(null),
+                runContext.render(this.recursive).as(Boolean.class).orElse(false)
             );
 
             java.util.List<io.kestra.plugin.fs.vfs.models.File> files = run
                 .getFiles()
                 .stream()
                 .filter(file -> file.getFileType() == FileType.FILE)
-                .collect(Collectors.toList());
+                .toList();
 
             java.util.List<io.kestra.plugin.fs.vfs.models.File> list = files
                 .stream()
@@ -94,10 +90,10 @@ public abstract class Downloads extends AbstractVfsTask implements RunnableTask<
                         VfsService.uri(
                             runContext,
                             this.scheme(),
-                            this.host,
-                            this.getPort(),
-                            this.username,
-                            this.password,
+                            runContext.render(this.host).as(String.class).orElse(null),
+                            runContext.render(this.getPort()).as(String.class).orElse(null),
+                            runContext.render(this.username).as(String.class).orElse(null),
+                            runContext.render(this.password).as(String.class).orElse(null),
                             file.getServerPath().getPath()
                         )
                     );
@@ -106,12 +102,12 @@ public abstract class Downloads extends AbstractVfsTask implements RunnableTask<
 
                     return file.withPath(download.getTo());
                 }))
-                .collect(Collectors.toList());
+                .toList();
 
             Map<String, URI> outputFiles = list.stream()
                 .filter(file -> file.getFileType() != FileType.FOLDER)
                 .map(file -> new AbstractMap.SimpleEntry<>(file.getName(), file.getPath()))
-                .collect(Collectors.toMap(entry -> entry.getKey(), entry -> entry.getValue()));
+                .collect(Collectors.toMap(AbstractMap.SimpleEntry::getKey, AbstractMap.SimpleEntry::getValue));
 
             if (this.action != null) {
                 VfsService.performAction(
@@ -119,8 +115,8 @@ public abstract class Downloads extends AbstractVfsTask implements RunnableTask<
                     fsm,
                     fileSystemOptions,
                     files,
-                    this.action,
-                    this.uri(runContext, this.moveDirectory)
+                    runContext.render(this.action).as(Downloads.Action.class).orElse(null),
+                    this.uri(runContext, runContext.render(this.moveDirectory).as(String.class).orElse(null))
                 );
             }
 
@@ -145,7 +141,6 @@ public abstract class Downloads extends AbstractVfsTask implements RunnableTask<
         @Schema(
             title = "Metadata of downloaded files."
         )
-        @PluginProperty(additionalProperties = io.kestra.plugin.fs.vfs.models.File.class)
         private final java.util.List<io.kestra.plugin.fs.vfs.models.File> files;
 
         @Schema(
