@@ -1,13 +1,15 @@
 package io.kestra.plugin.fs.ftp;
 
-import com.google.common.collect.ImmutableMap;
+import io.kestra.core.junit.annotations.KestraTest;
+import io.kestra.core.models.property.Property;
 import io.kestra.core.runners.RunContextFactory;
 import io.kestra.core.utils.IdUtils;
 import io.kestra.core.utils.TestsUtils;
 import io.kestra.plugin.fs.sftp.Delete;
-import io.kestra.core.junit.annotations.KestraTest;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
+
+import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
@@ -31,14 +33,14 @@ class DeleteTest {
         task = io.kestra.plugin.fs.ftp.Delete.builder()
             .id(DeleteTest.class.getSimpleName())
             .type(DeleteTest.class.getName())
-            .uri(from)
-            .host("localhost")
-            .port("6621")
-            .username("guest")
-            .password("guest")
+            .uri(Property.of(from))
+            .host(Property.of("localhost"))
+            .port(Property.of("6621"))
+            .username(Property.of("guest"))
+            .password(Property.of("guest"))
             .build();
 
-        Delete.Output run = task.run(TestsUtils.mockRunContext(runContextFactory, task, ImmutableMap.of()));
+        Delete.Output run = task.run(TestsUtils.mockRunContext(runContextFactory, task, Map.of()));
 
         assertThat(run.getUri().getPath(), containsString(from));
         assertThat(run.isDeleted(), is(true));
